# modforge

./: .gitignore  .gitmodules  ALL-FUNCTIONS.md  BUILDING.md  CONTENT-CREATION.md  CONTENT-MODDING.md  Cargo.toml  DECOMPILATION-STATUS.md  FEATURES.md  FINDINGS.md  FUNCTIONS.md  MECHANICS.md  MODFORGE-INTEGRATION.md  PERFORMANCE.md  README.md  RUST_PORT_PLAN.md  STRUCTS.md  TODO.md  UE4SS_PORT_PLAN.md  analyze_funcs.py  extract_funcs.py  inject_comments.py  inspection-guide.md
better-backpack/: BUILDING.md  Cargo.toml  INSTALL.md  PERFORMANCE_AUDIT.md  README.md  REQUIREMENTS.md  TROUBLESHOOTING.md  build.py  build.rs  dllmain.cpp  inject.c  settings.example.json  settings.json  winhttp.def
better-backpack/cpp/: shim.cpp
better-backpack/docs/: README.md  building.md  damage.md  ongoing.md  performance.md  rpg.md  rust-port.md  testing.md
better-backpack/src/: counters.rs  debug.rs  inv_hook.rs  lib.rs  log.rs  parms.rs  patch.rs  settings.rs  survival.rs
better-backpack/tests/: bandage_regression.rs  explore_bandage_path.rs  explore_environmental_damage_type.rs  explore_leak_source.rs  explore_perf_counters.rs  explore_perf_timeseries.rs  explore_thread_attribution.rs  layout.rs  op_reload_slot.rs  op_skill_refund.rs  op_skill_spend.rs  research_probes.rs  skill_armor.rs  skill_hunger.rs  skill_impact_resistance.rs  skill_lifesteal.rs  skill_move_speed.rs
decomp/: Cargo.toml  README.md
decomp/docs/: README.md  polish-ladder.md  retrospective.md
decomp/src/: main.rs
falcon-printer/: Cargo.toml  README.md
falcon-printer/docs/: README.md  architecture.md  building.md  coverage.md  non-goals.md  passes.md  polish-ladder.md  strategy.md  survey.md  usage.md
falcon-printer/src/: main.rs
grounded2-rpg/: Cargo.toml
grounded2-rpg/docs/: README.md  building.md  damage.md  engine.md  features.md  inventory.md  ongoing.md  performance.md  rpg.md  rust-port.md  testing.md  ue4ss-port.md
grounded2-rpg/src/: counters.rs  debug.rs  inv_hook.rs  lib.rs  settings.rs  survival.rs
grounded2-rpg/tests/: bandage_regression.rs  debug_snapshot.rs  explore_bandage_path.rs  explore_bandage_status_effects.rs  explore_environmental_damage_type.rs  explore_leak_source.rs  explore_perf_counters.rs  explore_perf_timeseries.rs  explore_status_effect_rows.rs  explore_thread_attribution.rs  op_simulate_heal.rs  op_skill_toggle.rs  research_probes.rs  skill_attack_damage.rs  skill_backpack.rs  skill_glide_speed.rs  skill_health_regen.rs  skill_jump_height.rs  skill_leap_distance.rs  skill_lifesteal.rs  skill_max_health.rs  skill_thirst.rs
horsey-mod/: Cargo.toml  README.md
horsey-mod/bestiary/: genes-extended.xml  pop-extended.xml
horsey-mod/docs/: ADDRESS-RESOLUTION.md  ALL-FUNCTIONS.md  ALLELE-MODEL.md  CHANGELOG.md  CONTENT-CREATION.md  DEBUGGING.md  DECOMPILATION-STATUS.md  ENGINE-EXTENSION.md  EXTERNAL-KNOWLEDGE.md  FIELD-READERS.md  FINDINGS.md  FUNCTION-BREAKDOWN.md  FUNCTIONS.md  GENE-CATALOG.md  GENE-CONTEXT-UNMAPPED.md  HK1-SHIFT-CLICK-TRANSFER-PLAN.md  HOOKING-STRATEGY.md  HORSE-PLACES.md  MECHANICS.md  MILESTONE-FIRST-INJECTION.md  MODFORGE-INTEGRATION.md  PRIOR-ART-HorseyLiveTweaks.md  RE-NOTES.md  SAVE-FORMAT.md  SESSION-2026-05-14-DI-A-BRINGUP.md  SLOT-MAP.md  STRUCTS.md  TESTING.md  TOOL-RESEARCH.md  VIABILITY.md  _gen_toc.py  input-surface.md  todo.md  vanilla-pop.xml  world-map-detection.md
horsey-mod/research/: FINDINGS.md  README.md  SLOT-MAP.md  build-gene-catalog.py  diff_save.py  extract-consumer-map.py  extract-field-readers.py  extract-gene-context.py  extract-slot-map.py  gene-usage-detail.txt  gene-usage-probe.tsv  probe-gene-uses.py  save_edit.py
horsey-mod/src/: chromosomes.rs  fatigue.rs  gamestate.rs  gene_names.rs  genes.rs  genes_xml.rs  hk1.rs  horse.rs  input_surface.rs  lib.rs  ops.rs  overlay.rs  patches.rs  scene.rs  snapshot.rs  targets.rs  targets_registry.rs  ui.rs
horsey-mod/tests/: README.md  RESEARCH.md  arm_combinator.rs  arm_full_safe_stack.rs  arm_lifecycle.rs  arm_render_trampoline.rs  attach.rs  bestiary_v1.rs  bestiary_v1_live.rs  chromosome_map.rs  chromosome_table_resolves.rs  dryrun_d1_d5.rs  dryrun_d3_d4.rs  dump_apply_gene.rs  dump_build.rs  dump_cmp_neg1.rs  dump_diag.rs  dump_name_diag.rs  dump_name_entry_deref.rs  dump_name_table_heap.rs  exit_to_overworld_smoke.rs  find_gamestate_via_money.rs  find_genes_xml.rs  find_horse_tomtato.rs  find_owned_horses.rs  find_retire_horse_handler.rs  find_xrefs.rs  gamestate_diag.rs  gamestate_ptr_deref.rs  gamestate_resolver_lives.rs  giant_tomtato.rs  hk1_capture_house_coords.rs  hk1_diff_all_owned_horses.rs  hk1_dump_drop_commit_bytes.rs  hk1_dump_horse_bytes.rs  hk1_find_tomtato_slot.rs  hk1_poke_container_flag.rs  hk1_probe_loc_field_layout.rs  hk1_probe_mouse_globals.rs  hk1_probe_scene_slot_vtables.rs  (+52 more)
horseyforge/: Cargo.toml  README.md
horseyforge/src/: fatigue.rs  gamestate.rs  lib.rs  ops.rs  snapshot.rs
il2cpp-smoke/: Cargo.toml
il2cpp-smoke/src/: lib.rs
injector/: Cargo.toml  inject.example.json
injector/src/: config.rs  launcher.rs  main.rs
modforge/: Cargo.toml  README.md  build.rs
modforge/cpp/: modforge_ui_native.cpp
modforge/docs/: composition-model.md  def-registry.md  input-prior-art.md  methodology.md  naming.md  screen-axis.md  target-registry.md  vanilla-invoke.md
modforge/spec/: effect-kinds.md  generic-primitives.md  op-envelope.json  op-registry.md  rpg-persistence.json  selector-grammar.md  skill-catalog.json  trigger-kinds.md  xp-curve.md
modforge/src/: args.rs  debug.rs  hook.rs  hot_reload.rs  lib.rs  log.rs  ops.rs  patterns.rs  research.rs  ring.rs  scanner.rs  seh.c  seh.rs  server.rs  settings.rs  shutdown.rs  ui.rs  worker.rs
outworld-station-tweaks/: Cargo.toml  settings.example.json
outworld-station-tweaks/docs/: research.md
outworld-station-tweaks/src/: debug.rs  (+3 more)
ueforge/: Cargo.toml  README.md  build.rs
ueforge-deploy/: Cargo.toml
uespy/: Cargo.toml  README.md  build.rs
uespy-build/: Cargo.toml
uespy-client/: Cargo.toml
uespy-deploy/: Cargo.toml
unityforge/: Cargo.toml
wwm-mod/: Cargo.toml  README.md
(+12781 files in other folders)
