[workspace]
resolver = "3"
members = ["grounded2-rpg", "outworld-station-tweaks", "ueforge"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[workspace.dependencies]
windows-sys = "0.61"
widestring = "1.2"
memoffset = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["json"] }
cc = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
winreg = "0.55"
zip = "5"
parking_lot = "0.12"
arc-swap = "1"
hex = "0.4"
crossbeam-channel = "0.5"
region = "3"

# Workspace-wide lints. Crates opt in with `[lints] workspace = true`.
#
# `undocumented_unsafe_blocks` is the load-bearing one: every
# `unsafe { ... }` should carry a `// SAFETY: <invariant justification>`
# comment so reviewers can audit the invariants. Set to `warn` (not
# `deny`) while we work through the existing ~340 unsafe blocks
# that pre-date the lint; new unsafe should not merge without a
# SAFETY comment. Bump to `deny` once the existing blocks are
# annotated.
[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# Keep dev unwinding so a stray panic in a worker or a test
# leaves a backtrace instead of aborting the whole game DLL.
# Release stays on abort for binary size + perf.
[profile.dev]
panic = "unwind"
