[workspace]
resolver = "3"
members = ["grounded2-mod", "horsey-mod", "il2cpp-smoke", "modforge", "outworld-station-mod", "ueforge", "unityforge", "wwm-mod"]
exclude = ["vendor/hudhook"]
# Note: `decomp/` is intentionally NOT a workspace member yet. It depends on
# r2sleigh which depends on libsla-sys, which does not currently build on
# Windows MSVC. Build decomp via WSL until upstream lands the windows fix.
# See decomp/docs/polish-ladder.md item 1. `falcon-printer/` retired 2026-05-14;
# kept as historical archive (docs only).

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-only"
publish = false

[workspace.dependencies]
windows-sys = "0.61"
widestring = "1.2"
memoffset = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
socket2 = "0.5"
ureq = { version = "2", default-features = false, features = ["json"] }
cc = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
winreg = "0.55"
zip = "5"
parking_lot = "0.12"
arc-swap = "1"
hex = "0.4"
crossbeam-channel = "0.5"
region = "3"
smallvec = "1"
fastrand = "2"
# retour: cross-platform detour library, Rust port of MS Detours.
# Handles RIP-relative rewrites, NOP padding, >2GB JMP relays.
# Used by the horsey-mod D1 / D5 detours. See
# `horsey-mod/docs/HOOKING-STRATEGY.md` for the strategy rationale.
retour = "0.3"
sha2 = "0.10"
proptest = "1"
insta = { version = "1", features = ["json"] }
zerocopy = { version = "0.8", features = ["derive"] }
# patternsleuth: UE4SS-blessed Rust sig-scan crate. No crates.io
# release; pinned to a recent master SHA. Workspace package
# licensed "MIT OR Apache-2.0" (per the upstream Cargo.toml,
# even though the root has no LICENSE file).
patternsleuth = { git = "https://github.com/trumank/patternsleuth.git", rev = "9573c52e8227af1d219782353e0ee6e9c6ec940c", features = ["process-internal", "image-pe"] }

# Workspace-wide lints. Crates opt in with `[lints] workspace = true`.
#
# `undocumented_unsafe_blocks` is the load-bearing one: every
# `unsafe { ... }` should carry a `// SAFETY: <invariant justification>`
# comment so reviewers can audit the invariants. Set to `warn` (not
# `deny`) while we work through the existing ~340 unsafe blocks
# that pre-date the lint; new unsafe should not merge without a
# SAFETY comment. Bump to `deny` once the existing blocks are
# annotated.
[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# Keep dev unwinding so a stray panic in a worker or a test
# leaves a backtrace instead of aborting the whole game DLL.
# Release stays on abort for binary size + perf.
[profile.dev]
panic = "unwind"

# Use the local hudhook fork that adds an IDXGISwapChain1::Present1
# hook on top of the upstream DX11 hooks. Required for SDL3-based games
# (Horsey ships SDL_GPU + SDL_render via SDL3) which call Present1
# instead of Present. Drop this patch when upstream lands the same fix;
# tracked at vendor/hudhook/PRESENT1-PATCH.md.
[patch.crates-io]
hudhook = { path = "vendor/hudhook" }
