[package]
name = "better-backpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "main"
crate-type = ["cdylib", "rlib"]

[features]
console = []
default = ["console"]

[dependencies]
anyhow = { workspace = true }
widestring = { workspace = true }
memoffset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uespy = { path = "../uespy" }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
] }

[build-dependencies]
uespy = { path = "../uespy" }

[dev-dependencies]
uespy = { path = "../uespy" }
