[package]
name = "better-backpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "main"
crate-type = ["cdylib", "rlib"]

# Consumed by ueforge/scripts/deploy.ps1.
[package.metadata.ueforge]
mod_folder_name  = "BetterBackpack"
game_name_regex  = "Grounded"
game_sub_path    = "Augusta/Binaries/WinGRTS"
zip_prefix       = "better-backpack"
target_dir       = "target/better-backpack"
example_settings = "better-backpack/settings.example.json"

[features]
console = []
default = ["console"]

[dependencies]
anyhow = { workspace = true }
widestring = { workspace = true }
memoffset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ueforge = { path = "../ueforge" }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
] }

[build-dependencies]
ueforge = { path = "../ueforge" }

[dev-dependencies]
ueforge = { path = "../ueforge" }
