[package]
name = "falcon_printer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "falcon-printer"
path = "src/main.rs"

[dependencies]
falcon = "0.6"
clap = { workspace = true }

[lints]
workspace = true
