[package]
name = "horsey-mod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Horsey Game mod. Native-PE binding consuming modforge directly.
#
# Sibling to ueforge (UE5/UE4SS) and unityforge (Unity Mono/IL2CPP)
# in the sense that it adapts modforge to a host runtime. The
# difference: ueforge and unityforge bind to ENGINES (any UE5 /
# Unity game can sit on top); horsey-mod is glued to one specific
# native-PE Windows game and carries its own injector.
#
# Attaches via a SEPARATE INJECTOR `horsey-inject.exe` which
# CreateRemoteThread's a LoadLibraryW(horsey.dll) into the
# running Horsey.exe.
#
# We chose injector-over-proxy because:
# 1. Proxying steam_api64.dll requires forwarding 1,089 exports.
#    MSVC link.exe's .DEF forwarder support is brittle in modern
#    versions; the alternative (1,089 hand-written stubs that
#    GetProcAddress + tail-call) is a lot of generated code.
# 2. Injection allows hot-reload without restarting Horsey
#    (detach our DLL via FreeLibrary, rebuild, re-inject).
# 3. Same pattern works for any native-PE Windows game; if a
#    second one shows up, this scaffolding gets lifted into a
#    shared `modforge::inject` module.

[lib]
# Two crate types:
# - cdylib: produces horsey.dll, the thing we inject.
# - rlib: kept so downstream extensions can `use horsey_mod::*`.
name = "horsey"
crate-type = ["cdylib", "rlib"]

# Injector binary. `cargo run -p horsey-mod --bin horsey-inject`
# attaches horsey.dll to a running Horsey.exe.
[[bin]]
name = "horsey-inject"
path = "src/bin/inject.rs"

[package.metadata.horsey-mod]
game_name_regex = "Horsey"
game_sub_path   = ""

[dependencies]
modforge = { path = "../modforge" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
crossbeam-channel = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
] }
widestring = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
retour = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
