[package]
name = "il2cpp-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# IL2CPP smoke target for unityforge. Proves the same Rust SDK
# drives an IL2CPP game through the BepInEx 6 IL2CPP shim. The
# concrete target game is configured at deploy time; this
# crate's job is to load + answer a small curl checklist (ping,
# walk_class, read_field, write_field, one Harmony postfix).
#
# Phase 3b proof-point per
# `docs/unityforge-plan.md` §6 Phase 3.

[lib]
crate-type = ["cdylib"]
name = "il2cpp_smoke"

[dependencies]
modforge = { path = "../modforge" }
unityforge = { path = "../unityforge" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true

[package.metadata.unityforge]
deploy_name = "il2cpp_smoke.unityforge.dll"
