[package]
name = "modforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Engine-agnostic core consumed natively by both ueforge (UE5 /
# UE4SS / Rust) and unityforge (Unity Mono / BepInEx / Rust +
# small C# shim). Anything that does not touch UObject or Mono
# lives here once. Op envelope, op registry, selector grammar,
# settings, counters, ring, scanner, winproc, server, shutdown,
# log, the pure RPG (xp / progress / format / state / store /
# disabled / catalog), plus the Effect + Trigger + Skill traits
# the per-framework crates implement.
#
# No FFI. Pure Rust rlib. Per-framework crates depend on it via
# `modforge = { path = "../modforge" }` and call it natively.

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
smallvec = { workspace = true }
fastrand = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
tiny_http = { workspace = true }
socket2 = { workspace = true }
ureq = { workspace = true }
hex = { workspace = true }
region = { workspace = true }
zerocopy = { workspace = true }
patternsleuth = { workspace = true }
# Transitive dep of patternsleuth; we need its `SectionKind` enum to
# restrict scans to .text. Version pinned to whatever patternsleuth
# uses (currently 0.32.x) via Cargo's unification.
object = { version = "0.32", default-features = false, features = ["read"] }

# Used only by the `modforge-deploy` bin target. Cargo only
# compiles them when that bin is being built; consumers that
# only link the lib don't pay the compile cost.
clap = { workspace = true }
regex = { workspace = true }
winreg = { workspace = true }
zip = { workspace = true }

[[bin]]
name = "modforge-deploy"
path = "src/bin/modforge_deploy.rs"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
