[package]
name = "modforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Engine-agnostic core consumed natively by both ueforge (UE5 /
# UE4SS / Rust) and unityforge (Unity Mono / BepInEx / Rust +
# small C# shim). Anything that does not touch UObject or Mono
# lives here once. Op envelope, op registry, selector grammar,
# settings, counters, ring, scanner, winproc, server, shutdown,
# log, the pure RPG (xp / progress / format / state / store /
# disabled / catalog), plus the Effect + Trigger + Skill traits
# the per-framework crates implement.
#
# No FFI. Pure Rust rlib. Per-framework crates depend on it via
# `modforge = { path = "../modforge" }` and call it natively.

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
smallvec = { workspace = true }
fastrand = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
tiny_http = { workspace = true }
socket2 = { workspace = true }
ureq = { workspace = true }
hex = { workspace = true }
region = { workspace = true }
zerocopy = { workspace = true }
patternsleuth = { workspace = true }
# Transitive dep of patternsleuth; we need its `SectionKind` enum to
# restrict scans to .text. Version pinned to whatever patternsleuth
# uses (currently 0.32.x) via Cargo's unification.
object = { version = "0.32", default-features = false, features = ["read"] }

# Optional, only when feature `overlay-ui` is enabled. Hudhook handles
# the DXGI Present hook, MinHook trampolines, ImGui DX11 init, WndProc
# subclass, and ResizeBuffers. We re-export its public types so
# consumers don't need to depend on hudhook directly.
hudhook = { version = "=0.9.0", optional = true }
imgui = { version = "=0.12", optional = true }

# Used only by the `modforge-deploy` bin target. Cargo only
# compiles them when that bin is being built; consumers that
# only link the lib don't pay the compile cost.
clap = { workspace = true }
regex = { workspace = true }
winreg = { workspace = true }
zip = { workspace = true }

[[bin]]
name = "modforge-deploy"
path = "src/bin/modforge_deploy.rs"

[features]
# In-game ImGui overlay via hudhook. Hooks the host game's
# IDXGISwapChain::Present so the panel renders INSIDE the game window.
# Brings in hudhook -> imgui (the imgui-rs Rust wrapper) -> imgui-sys,
# which vendors and statically links the C++ ImGui library. We write
# Rust; the underlying library is still C++ (that's where ImGui lives),
# but we no longer compile our own copy. Off by default so non-overlay
# consumers (ueforge with its UE4SS-bridge ImGui) pay zero compile cost.
# See docs/IN-GAME-OVERLAY-PLAN.md.
overlay-ui = ["dep:hudhook", "dep:imgui"]

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
