[package]
name = "ueforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Base layer for every UE4SS Rust mod in this workspace.
# One crate, no feature flags. ueforge's own build.rs compiles the
# bundled C++ (imgui + ueforge_ui + ueforge_shim) into a static lib
# that cargo links into every consumer (cdylib, test binary, the
# game's build script binary). Same dep entry, three contexts.

[lib]
crate-type = ["rlib"]

# Offline UE-asset inspection CLIs. Thin wrappers over
# `ueforge::uasset`. Used for diffing third-party pak mods,
# reverse-engineering data tables, sanity-checking that a mod
# actually touches the field its description claims.
[[bin]]
name = "dump-strings"
path = "src/bin/dump_strings.rs"

[[bin]]
name = "read-property"
path = "src/bin/read_property.rs"

# Framework-level deploy CLI for any ueforge-based UE4SS Rust mod
# in this workspace. Each mod opts in by adding a
# [package.metadata.ueforge] block to its Cargo.toml; the
# `cargo deploy ...` alias (configured in `.cargo/config.toml`)
# runs this binary.
[[bin]]
name = "ueforge-deploy"
path = "src/bin/ueforge_deploy.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
ureq = { workspace = true }
# `cc` is also a regular dep so `ueforge::build::CppShim` (called
# from a downstream mod's build.rs) can drive cc::Build directly.
# cc is mostly compile-time logic; the cdylib's release linker
# strips its runtime functions as dead code.
cc = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = { workspace = true }
memoffset = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
hex = { workspace = true }
crossbeam-channel = { workspace = true }
region = { workspace = true }
# Used only by the `ueforge-deploy` bin target. Cargo only
# compiles them when that bin is being built; consumers that
# only link the lib don't pay the compile cost.
clap = { workspace = true }
regex = { workspace = true }
winreg = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true

[build-dependencies]
cc = { workspace = true }
