[package]
name = "uespy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Embedded HTTP control plane for Unreal Engine game mods.
# Generic primitives (snapshot, read_bytes, write_bytes, call,
# walk_class) over a single POST /<endpoint>. Game crates supply a
# Host impl with a custom snapshot type and selector resolver.
#
# See ~/.claude/skills/runtime-control-http/SKILL.md for the design.

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
widestring = { workspace = true }
memoffset = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
