[package]
name = "uespy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Base layer for every UE4SS Rust mod in this workspace.
# One crate, no feature flags. uespy's own build.rs compiles the
# bundled C++ (imgui + uespy_ui + uespy_shim) into a static lib
# that cargo links into every consumer (cdylib, test binary, the
# game's build script binary). Same dep entry, three contexts.

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
ureq = { workspace = true }
# `cc` is also a regular dep so `uespy::build::CppShim` (called
# from a downstream mod's build.rs) can drive cc::Build directly.
# cc is mostly compile-time logic; the cdylib's release linker
# strips its runtime functions as dead code.
cc = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
widestring = { workspace = true }
memoffset = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
cc = { workspace = true }
